@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=86862
 
 Version 0.7.5.9, 2008-02-
 ---------------
++ AVC: CABAC detection
 x RealMedia parser was brocken
 x FLV parser was crashing
 x FLV: Better detection of Nellymoser audio
